# ludo-engsoft

./: LICENSE  README.md
context-explorer/: README.md  context_explorer.py
function-calling/: .env.example  README.md  three_pigs_function_calling.py
vm/: SETUP.md
week-01/: README.md
week-01/demos/context-explorer/: .env.example  README.md  context_explorer.py
week-01/demos/the-api-call/: .env.example  README.md
week-01/demos/the-api-call/chat-completions/: call.py  curl.sh
week-01/demos/the-api-call/multimodal/: send_image.py
week-01/demos/the-api-call/responses/: call.py  curl.sh
week-01/demos/the-api-call/streaming/: README.md  stream.py
week-01/ex-01-tokenise/: README.md  ex_01_tokenise.py
week-01/ex-02-base-vs-aligned/: README.md  simple_gpt2.py  simple_qwen3.py
week-01/ex-04-call-the-llm/: .env.example  README.md  call.py  call.sh  responses_openai.py
week-02/demos/context-explorer-rag/: .env.example  README.md  context_explorer_rag.py  knowledge.txt  pyproject.toml
week-02/demos/simple-embeddings-rag/: .env.example  .gitignore  README.md  knowledge.txt  pyproject.toml  simple_embeddings_rag.py
